# NevernesstoEvernessAutoScript

./: BUILD_LOG_2026-05-13.md  README.md  al-script.bat  compile_i18n.cmd  console.bat  main.py  pyproject.toml  requirements.txt  setup.py  version.json
.github/workflows/: build.yml
assets/openvino/: best.xml  metadata.yaml
assets/sounds/: counter.wav_32000_4_1000.npy  dodge.wav_32000_4_1000.npy
config/: deploy.yaml  template.json
deploy/: __init__.py  config.py  git.py  installer.py  logger.py  patch.py  pip.py  template  utils.py
docs/: api.md  quick_start.md
examples/: __init__.py  basic_automation.py
module/: __init__.py  app.py  launcher.py
module/base/: __init__.py  button.py  decorator.py  filter.py  mask.py  resource.py  retry.py  template.py  timer.py  utils.py
module/config/: __init__.py  code_generator.py  config.py  config_generated.py  config_generator.py  config_updater.py  deep.py  runtime_config.py  utils.py
module/config/argument/: args.json  argument.yaml  dashboard.yaml  default.yaml  gui.yaml  override.yaml  task.yaml
module/dev_tools/: button_extract.py
module/device/: __init__.py  app_control.py  base_device.py  control.py  device.py  device_manager.py  screenshot.py
module/feature/: __init__.py  box.py  feature.py  feature_set.py
module/gui/: __init__.py  communicate.py  config_adapter.py  config_manager.py  config_widgets.py  instance_panel.py  keybind_table.py  launcher.py  log_handler.py  main_window.py  overlay.py  task_config_tab.py  theme.py  toolbar.py  widgets.py
module/i18n/: __init__.py  en.json  zh_CN.json
module/neverness/: Labels.py  YOLO26OpenVINOAsyncDetector.py  __init__.py  config.py  globals.py  process_feature.py
module/ocr/: __init__.py  cache.py  ocr.py  ocr_base.py  ocr_result.py  router.py
module/runtime/: __init__.py  base_module.py  debug.py  error_codes.py  event_bus.py  instances.py  lifecycle.py  manager.py  metrics.py  recovery.py  resource.py  sandbox.py  security.py  state_machine.py  tick_loop.py  update.py  watchdog.py
module/task/: __init__.py  base_task.py  exceptions.py  executor.py  scheduler.py
module/update/: __init__.py  git_updater.py
module/util/: __init__.py  color.py  file.py  handler.py  logger.py  process.py
module/vision/: __init__.py
tests/: __init__.py  test_task.py
(+61 files in other folders)
