[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "NevernesstoEvernessAutoScript"
version = "0.1.0"
description = "Game automation for Neverness to Everness (异环), built on al-script"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13",
    "openvino>=2026.1",
    "onnxocr-ppocrv5>=0.0.17",
    "librosa>=0.11",
    "soundcard>=0.4",
    "scipy>=1.7",
    "scikit-learn",
    "PySide6>=6.5",
    "pywin32>=306",
    "numpy>=1.21",
    "scikit-image>=0.26",
    "psutil>=5.8",
    "adb-shell>=0.4",
    "adbutils>=0.6",
    "requests>=2.28",
    "pyappify>=1.0.2",
    "pyyaml>=6.0",
    "imageio>=2.30",
    "Pillow>=9.0",
]

[project.scripts]
nte-auto = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyappify]
app_name = "NevernesstoEvernessAutoScript"
app_version = "0.1.0"
author = "Neverness to Everness"
description = "Game automation for Neverness to Everness (异环)"
icon = "assets/icon.ico"
main_script = "module/__init__.py"
include_files = ["config/", "README.md"]
exclude_dirs = ["__pycache__", ".git", "tests", "docs"]
console = false
one_file = false
uac_admin = false
